# mse2cock

./: Cargo.toml  master-set.txt
src/: cock.rs  main.rs
