[package]
name = "mse2cock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.28.2", features = ["serialize"] }
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
